assets/css/styles.css
/* General Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Lato";
}

body {
    font-size: 100%;
}

a {
    text-decoration: none;
    color: #66fcf1;
    transition: color .1s ease-in-out;
    cursor: pointer;
}

p, li {
    font-size: 1.1em;
}

a:hover {
    color: white;
}

ul, nav {
    list-style: none;
}

section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 100px 80px;
    background-color: #0b0c10;
    color: #66fcf1;
}

section:nth-child(odd) {
    background-color: #45a29e;
    color: #1f2833;
}

section h3.title {
    text-transform: capitalize;
    font: 2.5em "Comfortaa";
    margin-bottom: 30px;
    text-align: center;
}

/* Header Styles */

header {
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: "Comfortaa";
    height: 50px;
    z-index: 10;
    color: #66fcf1;
}

#nav-title {
    margin: 0 15px;
    z-index: 2;
    font-weight: normal;
    opacity: 0;
    transition: opacity 1s;
}

header nav {
    display: flex;
    z-index: 1;
}

#navbar-background {
    position: absolute;
    top: 0;
    left:0;
    height: 100%;
    width: 100%;
    background-color: #1f2833;
    opacity: 0;
    transition: opacity 1s;
}

header nav li {
    margin: 0 15px;
}

/* Hero Styles */

#hero {
    position: relative;
    justify-content: center;
    text-align: center;
    min-height: 100vh;
    color: #66fcf1;
    z-index: -1;
}

#hero h1 {
    font: 8em "Comfortaa";
    margin-top: 100px;
    opacity: 0;
    animation: 1s slidefade .5s forwards;
}

#hero h3 {
    font: 1.8em "Lato";
    opacity: 0;
    color: #ffffff;
    margin-top: 20px;
    animation: 1s fade 1.5s forwards;
}


@keyframes slidefade {
    100% {
        opacity: 1;
        margin-top: 0;
    }
}

@keyframes fade {
    100% {
        opacity: 1;
    }
}

/* About Styles */

.about-content {
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    justify-content: space-between;
}

#about img {
    border-radius: 50%;
}

.about-image {
    flex: 1 1 30%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-text {
    flex: 1 1 70%;
    margin: 0 50px;
}

#skills {
    display: flex;
    font-family: "Comfortaa";
    margin-top: 50px;
}

#skills ul {
    height: 100px;
    font-size: 1.3em;
    font-weight: bold;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#skills h3 {
    width: 200;
    font-size: 1.3em;
    text-align: right;
    margin-right: 30px;
}

/* Projects Styles */
#projects-content {
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.project-container {
    position: relative;
    max-width: 384px;
    margin: 20px;
}

.project-container h3 {
    margin: 20px 0px;
    text-align: center;
    font-size: 1.5em;
}

.project-display {
    position: relative;
    flex: 1 1 1;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    max-width: 100%;
    max-height: 100%;
    text-align: center;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
    background-color: #45a29e;
}

.project-display img {
    max-width: 100%;
    max-height: 100%;
    top: 0;
    left: 0;
}

.project-display i {
    flex: 1 1 1;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    border-radius: 50%;
    opacity: 0;
    font-size: 34px;
    color: #000000;
    width: 60px;
    height: 60px;
    line-height: 60px;
    background: #ffffff;
    transform: scale(0);
    transition: transform 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
    color: #45a29e;
}

.project-display a {
    display: block;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    position: absolute;

}

.project-display * {
    transition: all .35s ease-in-out;
}

.project-display:hover i {
    transform: scale(1);
    transition: transform 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    opacity: 1;
}

.project-display:hover img{
    opacity: 0.3;
    filter: grayscale(100)
}

.github {
    font-size: 2.5em;
    margin-top: 80px;
    transition: transform .15s ease-in-out;
}

.github:hover {
    transform: scale(1.1);
    transition: transform .25s ease-in-out;
}

/* Contact Styles */

.contacts-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.contact-email {
    font-size: 1.4em;
}

.contact-email i {
    margin-right: 10px;
}

.social-links {
    display: flex;
    flex-direction: row;
    width: 50%;
    justify-content: space-around;
}

#contact li {
    flex: 1 0 auto;
    align-self: auto;
    text-align: center;
}

#contact a {
    color: #1f2833;
    transition: color .1s ease-in-out;
}

#contact a:hover {
    color: white;
}

#contact p {
    margin-bottom: 25px;
}

